--- a/package.json
+++ b/package.json
@@ -9,9 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.7.2",
+    "@mantine/core": "^5.7.2",
+    "@mantine/dates": "^5.7.2",
+    "@mantine/dropzone": "^5.7.2",
+    "@mantine/ds": "^5.7.2",
+    "@mantine/form": "^5.7.2",
+    "@mantine/hooks": "^5.7.2",
+    "@mantine/modals": "^5.7.2",
+    "@mantine/next": "^5.7.2",
+    "@mantine/notifications": "^5.7.2",
+    "@mantine/nprogress": "^5.7.2",
+    "@mantine/prism": "^5.7.2",
+    "@mantine/rte": "^5.7.2",
+    "@mantine/spotlight": "^5.7.2",
+    "@tabler/icons": "^1.111.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.6",
+    "embla-carousel-react": "^7.0.5",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
