--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "embla-carousel-react": "^7.0.5",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "iron-session": "^6.3.1",
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   }
 }
