--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.1.3",
+    "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.5",
@@ -39,6 +40,7 @@
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "swr": "^1.3.0",
     "typescript": "4.8.4",
