--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # .env
-APIWAREHOUSE=http://localhost:5005/api/v1
-MASTER_API_URL=http://172.0.0.1:50001/api/v1
+APIWAREHOUSE=http://127.0.0.1:5005/api/v1
+MASTER_API_URL=http://127.0.0.1:50001/api/v1
 NEXTAUTH_SECRET=12345
 NEXTAUTH_URL=http://localhost:3000/api/auth
 SECRET_COOKIE_PASSWORD=2gyZ3GDw3LHZQKDhPmPDL3sjREVRXPr8
