--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "swr": "^1.3.0",
     "typescript": "4.8.4",
     "yup": "^0.32.11"
