--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.2",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^1.3.0",
     "typescript": "4.8.4",
